<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appstud.parking.NFCActivity"
    tools:showIn="@layout/activity_nfc">

    <LinearLayout
        android:id="@+id/parking_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/parking_name"

                android:textColor="@android:color/black"
                android:textSize="@dimen/parking_name_text_size"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/parking_address_margin_top"
                android:fontFamily="sans-serif"
                android:text="@string/parking_address"
                android:textSize="14sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/parking_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/fab_margin"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_close_black_24dp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/parking_big_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_details"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/parking_adress_margin_bottom"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="@dimen/parking_success_big_icon_size"
            android:layout_height="@dimen/parking_success_big_icon_size"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_check_circle_black_24dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/parking_success"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="sans-serif"
            android:text="@string/parking_barrier"
            android:textColor="@android:color/darker_gray"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/parking_ticket_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_big_picture"
        android:layout_marginTop="@dimen/fab_margin"
        android:orientation="vertical"
        android:paddingStart="@dimen/parking_ticket_details_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/parking_entry_hour"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/parking_exit_hour"
            android:textColor="@android:color/darker_gray"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/parking_price"
            android:textColor="@android:color/darker_gray"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/parking_get_invoice"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            />
    </LinearLayout>


</RelativeLayout>
